Adds the ability to add nodes & connect them. Basic functionality in.
Removed all hydrator specific stuff. The user can now configure,
- icon
- name,
- cssClass to apply to the node element,
- endpoints - left or right or both

The endpoints is kind of weird as of now. Need to find a better name.

But both store and controller are in sync now and I am able to draw a diagram and construct a JSON out of it.

--- a/cdap-ui/app/directives/dag-1/my-dag-1.html
+++ b/cdap-ui/app/directives/dag-1/my-dag-1.html
@@ -1,3 +1,16 @@
-<div>
-  {{MyDag1Ctrl.store | json:4}}
+<div class="my-js-dag">
+  <div id="diagram-container">
+    <div id="dag-container">
+      <div ng-repeat="node in MyDag1Ctrl.nodes" class="box generic {{node.cssClass}}"
+             id="{{node.id}}">
+        <div class="node">
+          <div class="fa fa-close"
+               ng-click="">
+          </div>
+          <div class="icon fa {{node.icon}}"></div>
+        </div>
+        <div class="plugin-name" ng-bind="node.name"></div>
+      </div>
+    </div>
+  </div>
 </div>
