Adds remove node feature + fixed duplicate endpoints for nodes

--- a/cdap-ui/app/directives/dag-1/my-dag-1.html
+++ b/cdap-ui/app/directives/dag-1/my-dag-1.html
@@ -5,7 +5,7 @@
              id="{{node.id}}">
         <div class="node">
           <div class="fa fa-close"
-               ng-click="">
+               ng-click="MyDag1Ctrl.removeNode(node.id)">
           </div>
           <div class="icon fa {{node.icon}}"></div>
         </div>
