--- a/cdap-ui/app/directives/dag-1/my-dag-1.html
+++ b/cdap-ui/app/directives/dag-1/my-dag-1.html
@@ -4,7 +4,7 @@
       <div ng-repeat="node in MyDag1Ctrl.nodes"
              class="box generic {{node.cssClass}}"
              id="{{node.id}}"
-             ng-click="node.selected = true;"
+             ng-click="node.selected = !node.selected;"
              ng-class="{'selected': node.selected}">
         <div class="node">
           <div ng-if="node.badgeInfo" class="tooltip-wrapper {{node.tooltipCssClass}}">
