--- a/cdap-ui/app/directives/dag-1/my-dag-1.html
+++ b/cdap-ui/app/directives/dag-1/my-dag-1.html
@@ -71,12 +71,14 @@
 
 <div class="my-js-dag">
   <div id="diagram-container">
-    <div id="dag-container">
+    <div id="dag-container" ng-style="MyDag1Ctrl.panning.style">
       <div ng-repeat="node in MyDag1Ctrl.nodes"
              class="box generic {{node.cssClass}}"
              id="{{node.id}}"
              ng-click="node.selected = !node.selected;"
-             ng-class="{'selected': node.selected}">
+             ng-class="{'selected': node.selected}"
+             ng-style="node._uiPosition"
+             >
         <div class="node">
           <div ng-if="node.badgeInfo" class="tooltip-wrapper {{node.tooltipCssClass}}">
             <div class="badge-notification"
