--- a/cdap-ui/app/directives/dag-1/my-dag-1.html
+++ b/cdap-ui/app/directives/dag-1/my-dag-1.html
@@ -75,7 +75,7 @@
       <div ng-repeat="node in MyDag1Ctrl.nodes"
              class="box generic {{node.cssClass}}"
              id="{{node.id}}"
-             ng-click="node.selected = !node.selected;"
+             ng-click="MyDag1Ctrl.onNodeClick(node.id, $index)"
              ng-class="{'selected': node.selected}"
              ng-style="node._uiPosition"
              >
