--- a/cdap-docs/_common/_themes/cdap/layout.html
+++ b/cdap-docs/_common/_themes/cdap/layout.html
@@ -133,7 +133,7 @@
 #}
     {%- set section_numbering = '' %}
     {%- set section_numbering_key = 'section-numbering' %}
-    {%- if meta is defined %}
+    {%- if meta is defined and meta %}
         {%- if section_numbering_key in meta %}
             {%- set section_numbering = meta[section_numbering_key] %}
         {%- endif %}
@@ -147,7 +147,7 @@
 #}
     {%- set hidetoc = '' %}
     {%- set hidetoc_key = 'hide-toc' %}
-    {%- if meta is defined %}
+    {%- if meta is defined and meta %}
         {%- if hidetoc_key in meta %}
             {%- set hidetoc = meta[hidetoc_key] %}
         {%- endif %}
@@ -160,7 +160,7 @@
 #}
     {%- set hidenav = '' %}
     {%- set hidenav_key = 'hide-nav' %}
-    {%- if meta is defined %}
+    {%- if meta is defined and meta %}
         {%- if hidenav_key in meta %}
             {%- set hidenav = meta[hidenav_key] %}
         {%- endif %}
